# ECE1724F1-Team-Project

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: app.rs  client.rs  event.rs  handler.rs  input.rs  main.rs  ui.rs
personal-finance-tracker/: Cargo.toml
personal-finance-tracker/src/: app.rs  event.rs  handler.rs  input.rs  main.rs  ui.rs
server/: Cargo.toml
server/migrations/: schema.sql
server/src/: db.rs  main.rs  server.rs
src/: db.rs  main.rs  server.rs
