[package]
name = "finance_tracker_server"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = [ "postgres", "runtime-tokio", "tls-native-tls", "chrono" ] }
tokio = { version = "1.41.0", features = ["full"] }
strum = "0.26"
strum_macros = "0.26"
anyhow = "1.0.93"
actix-web = "4.9.0"
serde = "1.0.215"
